--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "portfolio-benji",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "Benjamin Petö",
+    "email": "benjaminpeto23@gmail.com",
+    "url": "https://www.benjaminpeto.com"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,13 +15,16 @@
     "type-check": "tsc --project tsconfig.json --pretty --noEmit"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.1.10",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "framer-motion": "^10.16.2",
     "next": "13.4.19",
+    "next-themes": "^0.2.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
