--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     },
     "dependencies": {
         "@nextui-org/react": "^2.2.9",
+        "@react-email/components": "^0.0.19",
         "@types/node": "20.5.9",
-        "@types/nodemailer": "^6.4.14",
         "@types/react": "18.2.21",
         "@types/react-dom": "18.2.7",
         "autoprefixer": "10.4.15",
@@ -28,11 +28,12 @@
         "geist": "^1.0.0",
         "next": "13.5.6",
         "next-themes": "^0.2.1",
-        "nodemailer": "^6.9.7",
         "postcss": "8.4.29",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-email": "^2.1.4",
         "react-hook-form": "^7.48.2",
+        "resend": "^3.2.0",
         "tailwindcss": "^3.3.3",
         "tailwindcss-animated": "^1.0.1",
         "typescript": "5.2.2"
